Fix module import in node

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": ["stage-2"],
   "plugins": [
-    "transform-flow-strip-types"
+    "transform-flow-strip-types",
+    "transform-es2015-modules-commonjs"
   ],
   "env": {
     "test": {
