--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "dependencies": {
+    "axios": "0.19.0-beta.1",
     "bluebird": "^3.5.1",
     "cheerio": "^1.0.0-rc.2",
     "lodash": "^4.17.5",
@@ -62,6 +63,7 @@
     "request": "^2.83.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-jest": "^22.4.1",
